# Tavern-Of-Heroes

./: Cargo.toml  README.md
benches/: creation_speed.rs
src/: heroes.rs  lib.rs  main.rs  tavern.rs
src/classes/: heroes.rs  mod.rs  tavern.rs
src/heroes/: mod.rs
src/tavern/: mod.rs
