[package]
name = "character_creator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.96"
serde = { version = "1.0", features = ["derive"] }
criterion = { version = "0.5.1", features = ["html_reports"]}
log = "0.4.18"
env_logger = "0.10.0"
postgres = "0.19.5"

[[bench]]
name = "creation_speed"
harness = false